[package]
name = "mp3"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.33"
ratatui = "0.30.2"
rodio = { version = "0.22.2", features = ["playback", "symphonia-all"] }
tokio = { version = "1.53.0", features = ["full"] }
