[package]
name = "mp3"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.33"
image = "0.25.10"
lofty = "0.24.0"
ratatui = "0.30.2"
rodio = { version = "0.22.2", features = ["playback", "symphonia-all"] }
termimage = "1.2.2"
tokio = { version = "1.53.0", features = ["full"] }
